deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: booking-tickets
  labels:
    project: booking-tickets
    environment: production
