deploy/k8s/base/networkpolicy-data-plane.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-data-plane-ingress
  namespace: booking-tickets
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - postgres-auth
          - postgres-booking
          - postgres-event
          - rabbitmq
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: auth-service
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - podSelector:
            matchLabels:
              app: booking-service
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 5672
    - from:
        - podSelector:
            matchLabels:
              app: event-service
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - podSelector:
            matchLabels:
              app: notification-worker
      ports:
        - protocol: TCP
          port: 5672
